--- a/main.css
+++ b/main.css
@@ -18,6 +18,15 @@ header .container {
 
 header li {
     display: inline;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin-left: 16px;
+
+}
+
+header li a{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 
 .container {
@@ -32,7 +41,8 @@ header li {
 }
 
 .articles article img {
-    height: 180px;
+    /*height: 180px; */
+    width: 100%;
 }
 
 .articles article {
@@ -58,5 +68,56 @@ section h2
     color: black;
     padding: 8px;
     display: inline-block;
+    text-decoration: none;
+    font-weight: bold;
+    margin-top: 8px;
 }
 
+.articles article a:hover {
+    text-decoration: underline;
+}
+
+.articles article p,
+.articles article a{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.articles article h3 {
+    font-size: 24px;
+}
+
+section h2 {
+    font-size: 32px;
+}
+
+#Noticias {
+    background-color: rgba(0, 162, 255, 0.5);
+}
+
+#Noticias .articles article a {
+    background-color: blue;
+}
+
+#reviews {
+    background-color: rgba(132, 0, 255, 0.5);
+}
+
+#reviews .articles article a {
+    background-color: blueviolet;
+}
+
+#E-sports {
+    background-color: rgb(238, 98, 98);
+}
+
+#E-sports .articles article a {
+    background-color: brown;
+}
+
+#Lancamentos {
+    background-color: rgba(0, 0, 255, 0.575);
+}
+
+#Lancamentos .articles article a {
+    background-color: rgb(1, 1, 61);
+}
